crates/ignis_lir/tests/snapshots/golden_lir__lir_comparison_operators.snap
---
source: crates/ignis_lir/tests/golden_lir.rs
expression: "common::format_lir(&result)"
---
=== LIR ===

fn compare(a: i32, b: i32): error {
  locals:
    %0: i32 = a
    %1: i32 = b
    %2: error = lt
    %3: error = le
    %4: error = gt
    %5: error = ge
    %6: error = eq
    %7: error = ne

  entry_0:
    store %0, t0
    store %1, t1
    t2 = load %0 : i32
    t3 = load %1 : i32
    t4 = LessThan t2, t3 : bool
    store %2, t4
    t5 = load %0 : i32
    t6 = load %1 : i32
    t7 = LessEqual t5, t6 : bool
    store %3, t7
    t8 = load %0 : i32
    t9 = load %1 : i32
    t10 = GreaterThan t8, t9 : bool
    store %4, t10
    t11 = load %0 : i32
    t12 = load %1 : i32
    t13 = GreaterEqual t11, t12 : bool
    store %5, t13
    t14 = load %0 : i32
    t15 = load %1 : i32
    t16 = Equal t14, t15 : bool
    store %6, t16
    t17 = load %0 : i32
    t18 = load %1 : i32
    t19 = NotEqual t17, t18 : bool
    store %7, t19
    t20 = load %6 : error
    ret t20
}
