crates/ignis_lir/tests/snapshots/golden_lir__lir_compound_assignment.snap
---
source: crates/ignis_lir/tests/golden_lir.rs
expression: "common::format_lir(&result)"
---
=== LIR ===

fn accumulate(): i32 {
  locals:
    %0: i32 = x [mut]

  entry_0:
    store %0, 10
    t0 = load %0 : i32
    t1 = Add t0, 5 : i32
    store %0, t1
    t2 = load %0 : i32
    t3 = Sub t2, 3 : i32
    store %0, t3
    t4 = load %0 : i32
    t5 = Mul t4, 2 : i32
    store %0, t5
    t6 = load %0 : i32
    ret t6
}
