crates/ignis_lir/tests/snapshots/golden_lir__lir_drop_before_overwrite.snap
---
source: crates/ignis_lir/tests/golden_lir.rs
expression: "common::format_lir(&result)"
---
=== LIR ===

fn overwrite_string(): i32 {
  locals:
    %0: string = s [mut]

  entry_0:
    store %0, "hello"
    drop l0
    store %0, "world"
    drop l0
    ret 0
}
