crates/ignis_lir/tests/snapshots/golden_lir__lir_drop_on_break.snap
---
source: crates/ignis_lir/tests/golden_lir.rs
expression: "common::format_lir(&result)"
---
=== LIR ===

fn drop(self: &mut record#0): void {
  locals:
    %0: &mut record#0 = self [mut]

  entry_0:
    store %0, t0
    ret void
}

fn break_with_owned(): i32 {
  locals:
    %0: record#0 = s

  entry_0:
    goto loop_header_2

  loop_exit_1:
    ret 0

  loop_header_2:
    br true, loop_body_3, loop_exit_1

  loop_body_3:
    t0 = &mut %0 : *mut record#0
    init_record t0, { 0: 1 } : record#0
    drop l0
    goto loop_exit_1

  loop_continue_4:
    goto loop_header_2
}
