crates/ignis_lir/tests/snapshots/golden_lir__lir_drop_on_continue.snap
---
source: crates/ignis_lir/tests/golden_lir.rs
expression: "common::format_lir(&result)"
---
=== LIR ===

fn drop(self: &mut record#0): void {
  locals:
    %0: &mut record#0 = self [mut]

  entry_0:
    store %0, t0
    ret void
}

fn continue_with_owned(): i32 {
  locals:
    %0: i32 = i [mut]
    %1: record#0 = s

  entry_0:
    store %0, 0
    goto loop_header_2

  loop_exit_1:
    ret 0

  loop_header_2:
    t0 = load %0 : i32
    t1 = LessThan t0, 10 : bool
    br t1, loop_body_3, loop_exit_1

  loop_body_3:
    t2 = &mut %1 : *mut record#0
    init_record t2, { 0: 1 } : record#0
    t3 = load %0 : i32
    t4 = Add t3, 1 : i32
    store %0, t4
    drop l1
    goto loop_continue_4

  loop_continue_4:
    goto loop_header_2
}
