crates/ignis_lir/tests/snapshots/golden_lir__lir_drop_on_early_return.snap
---
source: crates/ignis_lir/tests/golden_lir.rs
expression: "common::format_lir(&result)"
---
=== LIR ===

fn early_exit(flag: bool): i32 {
  locals:
    %0: bool = flag
    %1: string = s
    %2: error = _ [mut]

  entry_0:
    store %0, t0
    store %1, "hello"
    t1 = load %0 : bool
    br t1, then_1, else_2

  then_1:
    drop l1
    ret 1

  else_2:
    goto merge_3

  merge_3:
    t2 = load %2 : error
    drop l1
    ret 0
}
