crates/ignis_lir/tests/snapshots/golden_lir__lir_drop_owned_at_scope_end.snap
---
source: crates/ignis_lir/tests/golden_lir.rs
expression: "common::format_lir(&result)"
---
=== LIR ===

fn drop(self: &mut record#0): void {
  locals:
    %0: &mut record#0 = self [mut]

  entry_0:
    store %0, t0
    ret void
}

fn with_owned(): i32 {
  locals:
    %0: record#0 = s

  entry_0:
    t0 = &mut %0 : *mut record#0
    init_record t0, { 0: 1 } : record#0
    drop l0
    ret 0
}
