crates/ignis_lir/tests/snapshots/golden_lir__lir_drop_string_at_scope_end.snap
---
source: crates/ignis_lir/tests/golden_lir.rs
expression: "common::format_lir(&result)"
---
=== LIR ===

fn with_string(): i32 {
  locals:
    %0: string = s

  entry_0:
    store %0, "hello"
    drop l0
    ret 0
}
