crates/ignis_lir/tests/snapshots/golden_lir__lir_extern_function.snap
---
source: crates/ignis_lir/tests/golden_lir.rs
expression: "common::format_lir(&result)"
---
=== LIR ===

fn print(msg: string): void [extern] {

  entry_0:
    unreachable
}

fn greet(): void {

  entry_0:
    call print(""hello"")
    ret void
}
