crates/ignis_lir/tests/snapshots/golden_lir__lir_function_call.snap
---
source: crates/ignis_lir/tests/golden_lir.rs
expression: "common::format_lir(&result)"
---
=== LIR ===

Entry: main

fn helper(x: i32): i32 {
  locals:
    %0: i32 = x

  entry_0:
    store %0, t0
    t1 = load %0 : i32
    t2 = Mul t1, 2 : i32
    ret t2
}

fn main(): i32 {
  locals:
    %0: i32 = result

  entry_0:
    t0 = call helper(21) : i32
    store %0, t0
    t1 = load %0 : i32
    ret t1
}
