crates/ignis_lir/tests/snapshots/golden_lir__lir_if_else.snap
---
source: crates/ignis_lir/tests/golden_lir.rs
expression: "common::format_lir(&result)"
---
=== LIR ===

fn max(a: i32, b: i32): i32 {
  locals:
    %0: i32 = a
    %1: i32 = b
    %2: ! = _ [mut]

  entry_0:
    store %0, t0
    store %1, t1
    t2 = load %0 : i32
    t3 = load %1 : i32
    t4 = GreaterThan t2, t3 : bool
    br t4, then_1, else_2

  then_1:
    t5 = load %0 : i32
    ret t5

  else_2:
    t6 = load %1 : i32
    ret t6

  merge_3:
    t7 = load %2 : !
    unreachable
}
